# FnAud_g

./: .gitignore  .qwenignore  CMakeLists.txt  README.md  install_imgui.sh  ТЕХНИЧЕСКОЕ_ЗАДАНИЕ.md
.cache/clangd/index/: App.cpp.612228219B745FFE.idx  App.h.9436B1E5B351AAA0.idx  BaseView.cpp.9DE19499FEF92F07.idx  BaseView.h.2A03FC672B138C55.idx  ContractsView.cpp.48727C2C13B47F99.idx  ContractsView.h.0C7FB4F6790AC8EB.idx  CounterpartiesView.cpp.A1151212EE76101C.idx  CounterpartiesView.h.AC1ED922D4DA0F21.idx  CustomWidgets.cpp.5099765C15859180.idx  CustomWidgets.h.FBB56E9518112FDE.idx  DatabaseManager.cpp.D3ED959B7AC258BD.idx  DatabaseManager.h.FDC41CB6C2AF7C1A.idx  ExportManager.cpp.C2111E58504A75A4.idx  ExportManager.h.26046FD1AF77BE9A.idx  FileUtils.cpp.EE7F9F49F593536C.idx  FileUtils.h.F049E6BE908D182C.idx  ImGuiFileDialog.cpp.2BBE1BEF9910117E.idx  ImGuiFileDialog.h.9AADF10524B835FC.idx  ImGuiFileDialogConfig.h.C31B0D21B69F01B1.idx  ImportManager.cpp.3EF5C5EE9C7379CA.idx  ImportManager.h.124B21C6EC1A22D7.idx  ImportMapView.cpp.D44D1390B0C77061.idx  ImportMapView.h.699A7C0574F3ECD6.idx  InvoicesView.cpp.783D2DA0CD02FAC8.idx  InvoicesView.h.5E5722C9993EFC40.idx  KosguView.cpp.D3D13E0D57F0E04A.idx  KosguView.h.451ED9A81467E5F2.idx  PaymentsView.cpp.B9DEE94B5BF15784.idx  PaymentsView.h.6E0B144BB4847E5E.idx  PdfReporter.cpp.A638F3E96AFD25CB.idx  PdfReporter.h.0CD0E23B589819C1.idx  RegexesView.cpp.BA121C7A1B816A9B.idx  RegexesView.h.C4E74449CCEBE113.idx  SelectiveCleanView.cpp.EBF2F53EE42005F4.idx  SelectiveCleanView.h.4609050CE37F17B6.idx  ServiceView.cpp.48AF198EA7A98D3A.idx  ServiceView.h.B832B8FC8610B962.idx  SettingsView.cpp.99CBF0622C860D96.idx  SettingsView.h.35809BC8394C2E07.idx  SpecialQueryView.cpp.1AC7EB06ADAF1725.idx  (+29 more)
src/: App.cpp  App.h  main.cpp
src/managers/: DatabaseManager.cpp  DatabaseManager.h  ExportManager.cpp  ExportManager.h  ImportManager.cpp  ImportManager.h  PdfReporter.cpp  PdfReporter.h  UIManager.cpp  UIManager.h
src/utils/: FileUtils.cpp  FileUtils.h  StringUtils.cpp  StringUtils.h
src/views/: BaseView.cpp  BaseView.h  ContractsView.cpp  ContractsView.h  CounterpartiesView.cpp  CounterpartiesView.h  ImportMapView.cpp  ImportMapView.h  InvoicesView.cpp  InvoicesView.h  KosguView.cpp  KosguView.h  PaymentsView.cpp  PaymentsView.h  RegexesView.cpp  RegexesView.h  SelectiveCleanView.cpp  SelectiveCleanView.h  ServiceView.cpp  ServiceView.h  SettingsView.h  SpecialQueryView.cpp  SpecialQueryView.h  SqlQueryView.cpp  SqlQueryView.h  SuspiciousWordsView.cpp  SuspiciousWordsView.h
src/widgets/: CustomWidgets.cpp  CustomWidgets.h
tools/: README.md  test_data_generator.cpp
